# formagio

./: .gitignore  pyproject.toml  requirements.txt
app/: settings.py  urls.py
app/static/css/: base.css
app/templates/: base.html
graduation/: admin.py  forms.py  models.py  urls.py  views.py
graduation/migrations/: 0001_initial.py  0002_guest_picture_alter_guest_created_at.py  0003_alter_guest_email.py
graduation/templates/: home.html
prom/: admin.py  forms.py  models.py  urls.py  views.py
prom/data/: prom_guests.csv
prom/management/commands/: import_guests.py
prom/migrations/: 0001_initial.py  0002_promguest_updated_at.py
static/css/: extends.css  globals.css  variables.css
static/css/graduation/: components.css  home.css
static/css/graduation/components/: hero.css  navbar.css
static/js/: main.js
templates/: base.html  base_prom.html
templates/graduation/: guest_form.html  guest_list.html  home.html  thank_you.html
templates/graduation/components/: about.html  event_details.html  footer.html  form_component.html  guest_list_preview.html  hero.html  navbar.html
templates/prom/: guests.html  presence_success.html  prom_home.html
