[project]
name = "formagio"
version = "0.1.0"
description = "Site para a formatura de Giovanna Urquisa"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.6",
    "pillow>=11.3.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.12",
    "taskipy>=1.14.1",
]

[tool.ruff]
line-length = 88
extend-exclude = [
    'migrations',
    'settings.py',
    'manage.py',
    'management',
]

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']
ignore = ['PLR6301']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'

pre_run = 'task format'
run = 'python manage.py runserver'

pre_migrate = 'python manage.py makemigrations'
migrate = 'python manage.py migrate'

app = 'python manage.py startapp'
